--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ ul.contains-task-list { padding-left: 0; } ul ul.contains-task-list { padding-le
     </head>
     <body>
         <h1 id="数学分析讨论">数学分析讨论</h1>
+<p>已更新至2018年6月9日.</p>
 <h2 id="2018年6月5日-闫嘉琦-stolz公式和cauchy命题"><a href="Discussion_1.html">2018年6月5日 闫嘉琦 <strong>Stolz公式</strong>和<strong>Cauchy命题</strong></a></h2>
 <h2 id="2018年6月7日-张双双-一致连续专题"><a href="Discussion_2.html">2018年6月7日 张双双 <strong>一致连续专题</strong></a></h2>
 <h2 id="2018年6月9日-高子东-数列专题"><a href="Discussion_3.html">2018年6月9日 高子东 <strong>数列专题</strong></a></h2>
